--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,16 +1,16 @@
 \paragraph{Theoretical contributions}
-The theoretical section of this thesis aims to present an accessible introduction to the electrodynamics of periodic structures. It starts from the fundamental Maxwell equations, develops the concept of waves propagating in vacuum and in resonant media. It shows how the local medium responds to oscillating electric field as a damped oscillator and how it influences the dispersion curves. Beyond this common approach, the nonlocal response is introduced, and it is shown that in homogeneous media it inevitably causes the material properties to depend not only on the frequency, but also on the magnitude of the wave vector, which is known as spatial dispersion. 
+The theoretical section of this thesis aims to present an accessible introduction to the electrodynamics of periodic structures. It starts from the fundamental Maxwell equations, develops the concept of waves propagating in vacuum and in resonant media. It shows how the local medium responds to oscillating electric field as a damped oscillator and how it influences the dispersion curves. In the following chapter, the nonlocal response is introduced, and it is shown how it causes the material properties to depend not only on the frequency, but also on the magnitude of the wave vector, which is known as spatial dispersion. 
 
 This phenomenon is common in optics, but in homogeneous materials it is usually negligible. When the electrodynamics of periodic structures is concerned, the spatial dispersion is often particularly pronounced and should not be neglected. More general shapes of the dispersion curves in spatially-dispersive media are illustrated in several figures. 
 
-The dispersion curves are also shown to become periodic with regard to the wavevector, which is a result of the Bloch theorem; the chapter further introduces the concepts of isofrequency contours, Brillouin zones and high-symmetry points in the reciprocal space, and discusses the conditions under which the applicability for the notions of group, phase and information velocity are applicable.
+The dispersion curves are also shown to become periodic with regard to the wavevector, which is a result of the Bloch theorem; the chapter further introduces the concepts of isofrequency contours, Brillouin zones and high-symmetry points in the reciprocal space, and discusses the conditions under which the notions of group, phase and information velocity are applicable.
 
 Nowadays, perhaps more than ever earlier, it is important to maintain an outlook over the history of the rapid scientific development. A  historical review follows which traces back the origin of numerous concepts much earlier than the majority of metamaterial-related papers advertise. % The analysis of how atomic lattices should be treated as homogeneous media puzzled physicists over a century ago, and the synthesis of inhomogeneous structures with desired macroscopic \textit{homogenized} behaviour is not much younger than the microwave technology on its own.
-The historical part promotes the author's view of paradigms of \textit{artificial dielectrics} and \textit{negative-index media}, which appear to have developed independently, to be unified around the middle of twentieth century. In a similar manner, it is argued that the resulting paradigm of \textit{negative-index metamaterials} unified with the concept of \textit{photonic crystals} in the early 21th century. The process of unification always sheds new light on the physical interpretation and is beneficial for conceptual development of the field. The historical review is a basis for outlining the boundary between metamaterials and photonic crystals, which concludes the theoretical section.
+The historical part promotes the author's view on the notions of \textit{artificial dielectrics} and \textit{negative-index media}, which appear to have developed independently, to be unified around the middle of twentieth century. In a similar manner, it is argued that the resulting paradigm of \textit{negative-index metamaterials} unified with the concept of \textit{photonic crystals} around the millennium. The process of unification always sheds new light on the physical interpretation and is beneficial for conceptual development of the field. The historical review is a basis for outlining the boundary between metamaterials and photonic crystals, which concludes the theoretical section.
 
 \paragraph{Methodological contributions}
 Preparation of this thesis, which encompasses over 90 plots that show the results from over 4000 separate computations, necessitated the development of an efficient and convenient platform for numerical simulations of electromagnetic waves in periodic structures.
-The computations are defined in the form of scripts in the Python language. At the expense of possibly slower learning curve than programs with a graphical user interface may offer, the great advantage of scripting is in seamless integration with pre- and post-processing of the simulation that would otherwise be prohibitively tedious. The scripts can also be modified for automated parametric scans, optimisation of the structure performance and to match experimental data.
+The computations are defined in the form of scripts in the Python language. At the expense of possibly slower learning curve than programs with a graphical user interface may offer, the great advantage of scripting is in the seamless integration with further processing of the simulation results that would otherwise be prohibitively tedious. The scripts can also be modified for automated parametric scans, optimisation of the structure performance and to match experimental data.
 
 All scripts, containing roughly 5000 lines of Python code in total, were published online as open-source software \cite{dominec2014_meep_metamaterials} with the hope that they would be reused by others for future numerical research.
 
@@ -26,25 +26,25 @@ In the Numerical chapter, the internal operation of the finite-difference time-d
 
 The second part of the section describes how the same numerical algorithm can be used in different geometries to retrieve physical properties of the structure: the customary \textit{scattering-parameter method} is elaborated including its limitations and pitfalls, and finally it is compared to the \textit{current-driven homogenisation} method, which is less computationally efficient, but more robust against artifacts. Both methods were extensively employed and compared in the results.
 
-The inherent ambiguity of the scattering parameters method is often cited in the literature, both numerical and experimental. We resolved it in an own original way, based on the purely mathematical consideration of the arccosine discontinuities in the complex plane. The correction algorithm was incorporated in the simulation post-processing scripts and its application on all presented results proved that it works reliably. 
+The inherent ambiguity of the scattering parameters method is often cited in the literature. We resolved the ambiguity in an own original way, based on the purely mathematical consideration of the arccosine discontinuities in the complex plane. The correction algorithm was incorporated in the simulation post-processing scripts and its application on all presented results proved that it works reliably. 
 % The current-driven homogenisation required to develop 
 %	  2) by mathematical means, the phase-ambiguity of the retrieved effective index by the s-parameter method 
 
-\paragraph{Summary of results}
-The Results chapter fills the demand for some starting overview of the electromagnetic behaviour of ten common classes of metamaterials, in a didactic approach that the author felt to be missing in the available literature. %Where relevant, it also documents general 
+\paragraph{Summary of the results}
+The Results chapter presents an overview of the electromagnetic behaviour of ten most common classes of metamaterials, in a didactic approach that the author felt to be missing in the available literature. %Where relevant, it also documents general 
 
 \begin{enumerate}
-\item{It starts with an one-dimensional photonic crystal, which can be viewed as the simplest nontrivial periodic structure. Its dispersion curves consist of alternating photonic bands and band gaps, but no individual resonance can occur. The conditions for the formation of a zero-width photonic band gap are shown in parametric scans. The low-frequency and high-frequency limits for the effective index of refraction are demonstrated.
+\item{It starts with a one-dimensional photonic crystal, which can be viewed as the simplest periodic structure. Its dispersion curves consist of alternating photonic bands and band gaps, but no individual resonance can occur. The conditions for the formation of a zero-width photonic band gap are shown in parametric scans. The low-frequency and high-frequency limits for the effective index of refraction are demonstrated.
 } 
-\item{Replacing a dielectric layer with an array of metallic wires parallel to the electric field does not qualitatively change the high-frequency behaviour, but below the plasma frequency, it introduces plasma-like response with negative effective permittivity. The resulting plasma frequency is determined by the geometry; two plots compare the numeric results with analytic models with a good match.
+\item{Replacing the dielectric layer with an array of metallic wires parallel to the electric field does not qualitatively change the high-frequency behaviour, but below the plasma frequency, it introduces a plasma-like response with negative effective permittivity. The resulting plasma frequency is determined by the geometry; two plots compare the numeric results with analytic models, showing a good match.
 } 
-\item{Dividing the wires into a periodical array of cut-wires introduces the individual resonances; its imprint on the effective parameter spectra are described in detail, since it is characteristic also for resonances in all following structures. Parametric scans through wire radius and cut distance are shown to have nontrivial effects on the resonance frequency. Our experimental data from cut-wire array on silicon substrate are compared to numerical model, and the difference is explained as an effect of losses in the sample. 
+\item{Periodic gaps in the wires introduce the individual resonances with an electric dipole. Their spectra of  effective parameters are described in detail, since they are typical also for resonances in other structures. Parametric scans through wire radius and cut distance are shown to have nontrivial effects on the resonance frequency. Our experimental data from cut-wire array on silicon substrate are compared to numerical model, and the difference is explained as an effect of asymmetry and losses in the sample. 
 } 
-\item{The individual resonances with an electric dipole are compared to their counterparts with a magnetic dipole forming the fundamental resonance of split-ring resonators. The resonator with a single splitting in the ring is asymmetric, and it is demonstrated that all homogenization methods that do not account for the asymmetry yield erroneous results for this structure. The symmetric-splitting version, however, can be homogenized to obtain negative permeability. Further a combination of the double-split ring resonator with the wire array is shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenization.
+\item{The individual resonances with an electric dipole are compared to their counterparts with a magnetic dipole forming the fundamental resonance of split-ring resonators. The resonator with a single splitting in the ring is asymmetric, and it is demonstrated that  erroneous results for this structure are retrieved by by any homogenization method that does not account for the asymmetry. The version with a symmetric splitting, however, can be homogenized to obtain negative permeability. Further a combination of the double-split ring resonator with the wire array is shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenization.
 } 
-\item{On the contrary, the next chapter is included to illustrate a discrepancy between these two homogenization setups. When a central shunt conductor is added to a symmetric split-ring resonator, the electric type resonance becomes the fundamental one, and by continuous changes in the geometry the electric and magnetic resonance frequencies can be tuned compared to each other. While it might be intuitively expected they would form a region of negative refractive index, the simulations have shown that the narrow resonance line shape combined with moderate spatial dispersion cause the dispersion curves to bend into a concave shape. Consequently, the scattering-parameter method eventually fails to determine effective index of refraction, as is illustrated by four detailed plots.
+\item{On the contrary, the next chapter illustrates a discrepancy between these two approaches to homogenization. When a central shunt conductor is added to a symmetric split-ring resonator, the electric type resonance becomes the fundamental one, and by continuous changes in the geometry one can  can be tuned the electric and magnetic resonance frequencies. While it might be intuitively expected they would form a region of negative refractive index, the simulations have shown that the spatial dispersion causes the dispersion curves to bend into a concave shape. Detailed plots illustrate that the structure supports multiple modes at the same frequency. Consequently, the scattering-parameter method can not determine the effective index of refraction.
 } 
-\item{Dielectric spherical resonators are shown to exhibit individual resonances of Mie type, the first of which is analogous to the resonance in split-ring resonator. With the exactly defined model of titanium dioxide the sphere is made of, we can deduce minimum dissipative losses that can be achieved in experiment and show what impact they have on the resonance spectra. Further we accompany the computed spectra with our experimental results, arguing that the substantial deviation thereof arises from inhomogeneity of the resonators in the sample. Taking the size dispersion into account gives a reasonable match with experiment. Extended sieving of the spheres improved the resonance deeper, but no negative permeability was reached.
+\item{Dielectric spherical resonators are shown to exhibit individual resonances of Mie type, the first of which is analogous to the resonance in split-ring resonator. With the exactly defined dielectric model of the constituent dielectric, we can deduce minimum dissipative losses that can be achieved in an experiment and show what impact they have on the resonance spectra. Further we accompany the computed spectra with our experimental results, arguing that the substantial deviation thereof arises from inhomogeneity of the resonators in the sample. Taking the size dispersion into account gives a reasonable match with experiment. Extended sieving of the spheres improved the resonance deeper, but no negative permeability was reached.
 %		\add{Owing to the homogeneous broadening of the resonator resonance, caused by intrinsic losses of TiO$_{2}$, further sieving appears to lack any purpose. Not only this project broadens the numerous group of technically successful research projects pointed in utterly wrong direction, it also classifies into the lamentable subgroup of effort that could be entirely avoided if open and honest scientific discussion took place about the inherent problems. In this case, particularly, in all related papers it should be openly stated that the dielectric losses of TiO2 prevent building any applicable volume metamaterial, no matter how accurately the resonators are prepared.}
 } 
 \item{The spectra of dielectric rods parallel to the magnetic field were compared to that of dielectric spheres, pointing out their similarity. The resonant modes for low- and high-permittivity dielectrics were compared to illustrate that continuous changes in the dielectric permittivity lead to a qualitative change -- a crossover of the Mie and Bragg resonances in the spectra.
@@ -53,34 +53,38 @@ The Results chapter fills the demand for some starting overview of the electroma
 } 
 \item{At the example of metallic sheet with slits parallel to the magnetic field we show the effect of extraordinary transmission. We argue that it is mediated by standing surface plasmons, whose frequency depends on the slit periodicity and is almost independent of their width. Further we show that with increasing the metal thickness, the extraordinary transmission down-tunes with accordance to the dispersion of slot-waveguide modes.
 } 
-\item{Finally, we show that the extraordinary transmission also mediates the propagation of waves in fishnet metamaterials, made of stacked perforated metallic sheets. 
+\item{Finally, we show that the extraordinary transmission mediates the propagation of waves also in fishnet metamaterials which are made of stacked perforated metallic sheets. Current-driven homogenization plots for three different fishnets are compared to the scattering-parameter method, revealing  that the latter is hardly applicable to this kind of structures, due to strong near-field coupling between neighbouring cells. Fishnets also support additional waves carried by quadrupole resonances, which was also observed in terahertz spectra of samples manufactured in our laboratory. Nevertheless, the simulations predict that under a careful choice of geometry and illumination, fishnets exhibit a band of negative refractive index. 
 }
 \end{enumerate}
+There remain many topics that are related to the focus of thesis, but were not discussed here, such as other crystal families than the square/cubic one, possibly including also quasicrystals or disorder. Except for the fishnet samples, the discussion was restricted to structures sharing symmetries with the incoming fields; more general classes of structures would involve bianisotropy/chirality. Also the nonlinear response of all structures can be studied, but one has to be aware that the Bloch theorem and most of the presented theory assumes strictly linear response. However, direct numerical simulations of these phenomena can be presumably  achieved with a relatively easy adaptation of the simulation scripts.
+
+Another particularly useful direction of research would consist in adding the support of gyrotropy into the MEEP library, i.e. non-hermitian form of the permittivity or permeability tensors which breaks the time-reversal symmetry. This would open wide research possibilities of linear metamaterial devices with pronounced non-reciprocal effects.
 
 \paragraph{Conclusions for metamaterial homogenization}
-Throughout the thesis, we encountered some structures that can be easily homogenized, and we argued that our decision to view the structure as homogeneous may form a good criterion to define the notion of \textit{metamaterials}. Different kinds of obstacles may prevent the homogenization.
+Throughout the thesis, we encountered many structures that can be described by effective parameters that would describe a homogeneous medium with the same macroscopic behaviour, and we argued that our decision to view the structure as homogeneous may form a good criterion to define the notion of \textit{metamaterials}. However, different kinds of technical or conceptual difficulties arise during the homogenization.
 
-\textit{Negative refraction} at the interface of air and a given structure does not imply that it has \textit{negative effective index of refraction}, $\Neff'<0$; this homogenized parameter may not even be defined. Anisotropic behaviour is present in all periodic structures; very often is strong enough to preclude the use of $\Neff'$. On page \pageref{indexofrefraction} we have argued that one exception is when the light propagates nearly parallel to an optical axis -- thanks to it, one can assign effective parameters to most metamaterials. An exception from this exception, we suggest on page \pageref{diracpoint}, may in the vicinity of the zero-width band gaps. 
-Some metamaterials have such a strong spatial dispersion that their dispersion curves allow additional waves (Fig. \ref{fg_cdh2}a, \ref{fg_dcllactivity}), and this is another reason that precludes to assign them with $\Neff$. 
+The observation of a \textit{negative refraction} at the interface of air and a given structure does not imply that it has \textit{negative effective index of refraction}, $\Neff'<0$, since this homogenized parameter may not be defined at all. Some form of anisotropy is more or less present in all periodic structures; very often it is strong enough to preclude the use of $\Neff'$. On page \pageref{indexofrefraction} we have argued that one exception is when the light propagates nearly parallel to an optical axis of the anisotropic medium -- this warrants assigning effective parameters to most metamaterials. The zero-width band gaps with a cusp in isofrequency contours present an exception from this exception, as suggested on p. \pageref{diracpoint}. 
 
-When a scientific method is used beyond its scope, sometimes it leads to mathematical error or returns obviously invalid results. The scattering parameter method, unfortunately, does not indicate its limits of applicability. By its means, a finite slab of a metamaterial can always be assigned with some effective parameters. Even when the spatial dispersion does not enable the excitation of additional waves as is the case of Fig. \ref{fg_cdh_yslit}a, the near-field coupling between neighbouring cells may be relatively strong. Then the scattering-parameter method fails to predict the behaviour of an infinite periodic lattice and $\Neff$ has to be determined by more robust approach, such as the current-driven homogenisation. This is elaborated on page \pageref{sparamweaknesses}. We propose that the absence of skips in the scattering-parameter method results, their compliance to Kramers-Kronig relations and their zero (or at most weak) dependence of the number of simulated unit cells are a good verification.
+Some metamaterials have such a strong spatial dispersion that their dispersion curves allow \textit{additional waves} sharing the same frequency and direction of propagation (Fig. \ref{fg_cdh2}a, \ref{fg_dcllactivity}), and this is another complication that precludes the description of the metamaterial by a single spectrum of $\Neff$. 
+
+When a scientific method is used beyond its scope, sometimes it leads to mathematical error or returns results which are obviously invalid. We have show on several examples that the widely used \textit{scattering parameter method}, unfortunately, does not indicate its limits of applicability. By its means, a finite slab of a metamaterial can always be assigned with some effective parameters (see page \pageref{sparamweaknesses}). However, even when the spatial dispersion is not strong enough to enable the existence of \textit{additional waves} as is the case of Fig. \ref{fg_cdh_yslit}a, the near-field coupling between neighbouring cells may be relatively strong. Then the scattering-parameter method fails to predict the behaviour of an infinite periodic lattice and $\Neff$ has to be determined by more robust approach, such as the current-driven homogenisation. We suggest that the scattering-parameter method results should always be checked for basic criteria of validity, such as the absence of non-resonant skips in the spectra, their compliance to Kramers-Kronig relations and their negligible sensitivity to the number of simulated unit cells.
 %	- (the choice of branch for Neff is unambiguous by our retrieval procedure based on FDTD; yet it deserves
 %		proper physical interpretation in some structures)
 %		although often mentioned as such \cite{mortensen2010unambiguous}, the ambiguity of retrieved refractive index does not 
 %		present a big issue compared to more fundamental limitations of the s-parameter method
 
-Finally, even when the scattering parameter method yields physically sound index of refraction, it does not guarantee that the retrieved effective impedance $\Zeff$ is valid nor that the medium may described by means of the effective local permittivity $\eeff$ and permeability $\meff$. These effective parameters require the unit cell be much smaller than the Bloch wavelength. In most metamaterials this condition is fulfilled in several narrow portions of the spectrum only, namely where $|\Neff'| \ll c/(2af)$. Otherwise the spectra of $\eeff$ or $\meff$ acquire typical antiresonance artifacts, which have incited disputes stretching over several papers (starting with Ref. \cite{koschny2003resonant}). Instead, the Landau-Lifshitz form of permittivity $\epsLL(\omega,\KK)$ is required to fully account for the spatial dispersion. 
+Finally, even when the scattering parameter method yields physically sound index of refraction, it does not guarantee that the retrieved effective impedance $\Zeff$ is valid nor that the medium may described by means of the effective local permittivity $\eeff$ and permeability $\meff$. These effective parameters require the unit cell be much smaller than the Bloch wavelength. In most metamaterials, this condition is fulfilled in one or few narrow portions of the spectrum only, namely where $|\Neff'| \ll c/(2af)$. Otherwise the spectra of $\eeff$ or $\meff$ acquire typical antiresonance artifacts, which have incited disputes stretching over several papers (starting with Ref. \cite{koschny2003resonant}). We argumented that the Landau-Lifshitz form of permittivity $\epsLL(\omega,\KK)$ is required to fully account for the spatial dispersion. 
 %	- some of them have Neff<0, but the regions of applicability for eeff nor meff is much more restricted 
 %		to regions of |Neff'|~0, since as argued earlier, the local effective parameters of $\eeff$ and $\meff$ do not have enough degrees of freedom to express the (longitudinal) spatial dispersion; i.e. the effect of the fields varying significantly within one unit cell.
 
-The described non-implications are summed by the following formula:
+The described non-implications are summed up by the following formula:
 \begin{equation}
 \begin{array}{c} \text{negative}\\ \text{refraction} \end{array}
 \quad\not\Rightarrow\quad  \exists \Neff' < 0 
 \quad\not\Rightarrow\quad \begin{array}{c} \text{s-parameter}\\ \text{method}\\ \text{applicable}  \end{array}
 \quad\not\Rightarrow\quad \begin{array}{c} \exists \eeff'<0\\ \exists\meff'<0  \end{array} 
 \label{eq_implications}\end{equation} % 
-Let us note that implications opposite to these shown may not hold, either.  For instance, the array of the combined split-ring resonators may have clearly defined electric and magnetic individual resonances, yet the index of refraction $\Neff$ is not applicable when they overlap  (Fig. \ref{fg_cdh1},\ref{fg_cdh2}).
+Let us note that implications opposite to these shown may not hold, either.  For instance, in Figs. \ref{fg_cdh1} and \ref{fg_cdh2}, the array of the combined split-ring resonators may have clearly defined electric and magnetic individual resonances, yet the index of refraction $\Neff$ is not applicable when they overlap.
 
 %	- the conditions for observation of zero-width photonic bands (e.g. Fig. \ref{fg_cdh2}b) and zero-width photonic band gaps (e.g. Fig.)
 %  * pointed out the fundamental problems: 
@@ -89,25 +93,22 @@ Let us note that implications opposite to these shown may not hold, either.  For
 
 %  * the RESULTS section has shown that for the idealized lattice of resonant elements, denoted as a Bloch lattice in \ref{simovski2007bloch}, the spectra of effective index of refraction would have a form of alternating photonic bands, with always growing Neff(f), and photonic band gaps, where $Neff'(f)$ follows a Brillouin zone boundary, except for well-defined individual resonances of the electric or magnetic dipole. The results have, nonetheless, also proven that this interpretation is only approximate, due to evanescent inter-cell coupling and the resulting spatial dispersion. In particular, some structures made of metal preclude to use the $Neff'(f)$
 
-\paragraph{What the thesis does not contain} 
-There remain many topics that are related to the focus of thesis, but were not discussed here, such as other crystal families than the square/cubic one, possibly including also quasicrystals or disorder. We restricted the discussion to structures sharing symmetries with the incoming fields; more general classes of structures would involve bianisotropy/chirality. Also the nonlinear response of all structures can be studied, but one has to be aware that the Bloch theorem and most of the presented theory assumes strictly linear response. However, direct numerical simulations of these phenomena can be presumably  achieved with a relatively easy adaptation of the simulation scripts.
-
-Another particularly interesting generalisation would be extension of the MEEP library for the support of gyrotropy, i.e. non-hermitian form of the permittivity or permeability tensors that breaks time-reversal symmetry. This would open the wide research possibilities of linear metamaterial devices with pronounced non-reciprocal effects.
-
+%\paragraph{What the thesis does not contain} 
 \paragraph{Closing words} 
 Many papers focused on metamaterials -- and maybe majority of them -- are dedicated to achieving negative index of refraction or a cloaking effect, with as high frequency and as low losses as possible.
 On the way to this tantalizing aim and to fast publication, too often they use an overly simplistic theoretical description or inadequate characterisation approach, or both. %Typically, the scattering parameter method is applied for structures with strong coupling
 
-The rapid growth of the publications related to metamaterials of the last two decades is certainly beneficial for the overall growth of knowledge. However, one should not forget about the downsides it brings. Some of the concepts developed decades ago seem to be re-invented and published as novel. Aside of it, a significant portion of papers deals with the same class of structures, presenting a quantitative improvement over the previous results only, and fail to bring any conceptual progress. This way they dilute the information density of even high-impacted journals. This is exacerbated by the fact that, in the author's experience, even the metamaterial monographs are mostly assembled of separate papers that are unrelated to each other and by far not covering all relevant theory.
+The rapid growth of the publications related to metamaterials of the last two decades is certainly beneficial for the overall growth of knowledge. However, one should not forget about the price to be paid for it. Some of the concepts developed decades ago seem to be re-invented and published as novel. Aside of it, a significant portion of papers deals with the same class of structures, presenting only a minute quantitative improvement over the previous results, and fail to bring any conceptual progress. This way, they dilute the information density of even high-impacted journals. This is exacerbated by the fact that, in the author's experience, even the metamaterial monographs are mostly assembled of separate papers that are unrelated to each other and by far not covering all relevant theory.
 
 On the contrary, the genuinely tough issues seem to be rather underexposed. In the infrared and optical range, these are most importantly the ubiquitous dissipative losses. They are common for high-permitivity dielectrics and metals, where the permittivity of any known low-loss material appears insufficient for metamaterial behaviour \cite{dominec2014transition}; contemporary superconductors lose their superconducting properties above terahertz frequencies. To the knowledge of author, all experimental demonstrations of metamaterials are restricted to unpractically small dimensions. 
 % \cite{tassin2012comparison}
 % "First, reduction of losses by using crystalline metals and/or by introducing optically amplifying materials; developing three-dimensional isotropic designs rather than planar structures; and finding ways of mass producing large-area structures." -- Soukolis in http://eurekalert.org/pub_releases/2007-01/dl-mft010407.php?light
 %Compared to the publication boom and its optimistic aims, the metamaterials find their way to applications markedly slowly. The novel phenomena such as cloaking or sub-wavelength imaging are still confined to laboratory demonstrations, usually for structures not much bigger than the wavelength. The research of semiconductors in the first decades did not bring any notable applications, either, but even at that time it had to be clear that semiconductors present a wholly new field of basic material research. On the other hand, the recent progress in the field of metamaterials resembles the applied research: It is mostly a \textit{design} and \textit{optimisation} of already known structures towards some particular behaviour, rather than a search for new fundamental physics. 
 
-The sub-diffraction imaging has yet another fundamental issue aside of the dissipative losses. It requires to suppress the spatial dispersion, which arises from nonzero dimensions of the unit cells. If future progress in nanotechnology proves sufficient for this, the question remains whether it would not become also more than sufficient to fabricate superior optical sensors eliminating the need for any metamaterial super- or hyper-lens. 
+The sub-diffraction imaging has yet another fundamental issue aside of the dissipative losses. It requires to suppress the spatial dispersion, which arises from nonzero dimensions of the unit cells. If future progress in nanotechnology proves sufficient for this, the question remains whether it would not become also more than sufficient for the fabrication of superior measurement techniques, completely eliminating the need for any metamaterial super- or hyper-lens. 
 
-The challenges which the metamaterial research faces nowadays may be once overcome. However, it appears much more likely to the author that the related research will indirectly incite progress in an unexpected direction, be it in nanofabrication, material science, nonlinear optics, theoretical electrodynamics, or any other field of physics and technology.
+The challenges which the metamaterial research faces nowadays may be once overcome. However, it appears much more likely to the author that the related research will be beneficial indirectly, though inciting development in an unexpected direction, be it in nanofabrication, material science, solid-state physics, nonlinear optics, theoretical electrodynamics, or any other field of physics and technology.
 
-It would be beneficial to avoid regarding metamaterials as mere means for putting into practice the notorious -- but so far, mostly elusive -- list of practical \textit{tasks} they may once accomplish. Instead, in line with the quotation from the start of this section, it can be much more inspiring and useful to \textit{long for the endless immensity} of different phenomena that emerge from the wave interaction with periodic structures and for accurate theoretical description thereof. 
+It would be beneficial to avoid regarding metamaterials as mere means for putting into practice the notorious -- but so far, mostly elusive -- list of practical \textit{tasks} they seem to promise. Instead, in line with the quotation from the start of this section, it can be much more inspiring and useful to \textit{long for the endless immensity} of different phenomena that emerge from the wave interaction with periodic structures.
+%and for accurate theoretical description thereof. 
 
